@@ -15,25 +15,26 @@ targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.gff3.Manager'
 String myAppName = 'RGDGff3Pipeline'
 
+project.archivesBaseName = myAppName
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile 'org.apache.commons:commons-collections4:4.4'
-    compile 'org.apache.commons:commons-dbcp2:2.8.0'
+    compile 'org.apache.commons:commons-dbcp2:2.9.0'
+    compile 'commons-net:commons-net:3.7'
     compile 'log4j:log4j:1.2.17'
-    compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.10'
-    compile 'org.springframework:spring-jdbc:5.3.10'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.7.0.0'
+    compile 'org.springframework:spring-beans:5.3.11'
+    compile 'org.springframework:spring-jdbc:5.3.11'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'commons-net:commons-net:3.6'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
-    baseName = myAppName
     manifest {
         attributes(
             'Built-By': System.getProperty('user.name'),
