@@ -11,7 +11,7 @@ DATA_RELEASE_DIR=/home/rgddata/data_release/GFF3
 
 SERVER=`hostname -s | tr '[a-z]' '[A-Z]'`
 if [ "$SERVER" == "REED" ]; then
-  EMAILLIST=jrsmith@mcw.edu,RGD.Developers@mcw.edu
+  EMAILLIST=jrsmith@mcw.edu,rgd.devops@mcw.edu
 #  EMAILLIST=mtutaj@mcw.edu,llamers@mcw.edu
 else
   EMAILLIST=mtutaj@mcw.edu,llamers@mcw.edu
