@@ -1,3 +1,6 @@
+Jan 19, 2022
+  agr: switched to assembly rn7 for rat
+
 Nov 30, 2021
   added generation of ontology/CHEBI tracks for GRCm39 assembly
   sped up generation of ontology files
